# portal-iot

./: README.md  app.json
.github/workflows/: docker-publish.yml
device-agent/: main.py  pyproject.toml
smashing-dashboard/: Dockerfile  Gemfile
smashing-dashboard/dashboards/: dashboard.erb  layout.erb
smashing-dashboard/jobs/: buzzwords.rb  convergence.rb  mqtt.rb  sample.rb
